--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -16,7 +16,7 @@
 }
 
 .cart-items-item img{
-    width: 50px;
+    width: 40px;
 }
 
 .cart hr{
@@ -40,4 +40,125 @@
     max-width: 100%;
     max-height: 100%;
     cursor: pointer;
+}
+
+.cart-bottom{
+    margin-top: 80px;
+    display: flex;
+    justify-content: space-between;
+    gap: max(12vw, 20px);
+}
+
+.cart-total{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.cart-total-details{
+    display: flex;
+    justify-content: space-between;
+    color: #555;
+}
+
+.cart-total hr{
+    margin: 10px 0px;
+}
+
+.cart-total button{
+    border: none;
+    color: white;
+    background-color: tomato;
+    width: max(15vw, 200px);
+    padding: 12px 0px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.cart-total button:hover{
+    color: white;
+    background-color: rgb(255, 38, 0);
+}
+
+.cart-promocode{
+    flex: 1;
+}
+
+.cart-promocode p{
+    color: #555;
+}
+
+.cart-promocode-input{
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #eaeaea;
+    border-radius: 4px;
+}
+
+.cart-promocode-input input{
+    width: 310px;
+    background: transparent;
+    border: none;
+    outline: none;
+    padding-left: 10px;
+}
+
+.cart-promocode-input button{
+    width: max(10vw, 150px);
+    padding: 12px 5px;
+    background-color: black;
+    border: none;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+@media (max-width: 750px) {
+  .cart-items-title {
+    grid-template-columns: 0.6fr 1fr 0.8fr 1fr 0.8fr 0.3fr;
+    font-size: 10px;
+    gap: 4px;
+  }
+
+  .cart-items-item {
+    font-size: 11px;
+  }
+
+  .cart-items-item img {
+    width: 35px;
+  }
+
+  .quantity-icon {
+    width: 20px;
+    height: 20px;
+  }
+
+  .cart-quantity-control {
+    gap: 4px;
+  }
+
+  .cart-bottom {
+    flex-direction: column-reverse;
+    gap: 30px;
+  }
+
+  .cart-promocode-input {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 10px;
+    padding: 10px;
+  }
+
+  .cart-promocode-input input {
+    width: 100%;
+  }
+
+  .cart-promocode-input button,
+  .cart-total button {
+    width: 100%;
+  }
 }
