--- a/src/components/LoginPopUp/LoginPopUp.css
+++ b/src/components/LoginPopUp/LoginPopUp.css
@@ -1,6 +1,8 @@
-.login-popup{
-    position: absolute;
-    z-index: 1;
+.login-popup {
+    position: fixed;           
+    z-index: 1000;           
+    top: 0;                    
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: #00000090;
